# thaler

./: Cargo.toml
benches/: bench_freivald.rs  bench_lagrange.rs  bench_sumcheck.rs
src/: lagrange.rs  sumcheck.rs
tests/: test_freivald.rs  test_lagrange.rs  test_sumcheck.rs
