[package]
name = "thaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.0"
rand = "0.8.5"
ark-ff = "0.4.2"
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
ark-poly = "0.4.2"

[dev-dependencies]
rstest = "0.18.2"
lazy_static = "1.4.0"